PIP-1042 Address Sonar feedback after upgrading to Java 25